[project]
name = "fast-log-queue"
version = "0.1.0"
requires-python = ">= 3.11"
description = "Monorepo for API, worker, and infrastructure"
authors = [{ name = "Dragos Catarahia", email = "dragos@catarahia.me" }]
dependencies = [
    "alembic>=1.13.1, <1.14",
    "asyncpg>=0.29.0, <0.30",
    "boto3>=1.34.113, <1.35",
    "fastapi[all]>=0.1.16,<2.0.0",
    "psycopg2-binary>=2.9.9, <3",
    "sqlalchemy>=2.0.30, <2.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.ruff_cache
  | .*/\.venv
)/
'''

[tool.pyright]
exclude = ["alembic"]
venvPath = "."
venv = ".venv"

# https://github.com/RobertCraigie/pyright-python?tab=readme-ov-file#pre-commit
[tool.ruff]
line-length = 120

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "E501", # line-too-long (black handles this)
    "E711", # none-comparison
    "E712", # true-false-comparison
]
exclude = [".venv", ".git", ".ruff_cache"]

[tool.ruff.lint.isort]
default-section = "third-party"
known-third-party = ["fastapi", "boto3", "sqlalchemy"]

[tool.ruff.lint.isort.sections]
testing = ["pytest"]
