[project]
name = "log-api-service"
version = "0.1.0"
requires-python = ">= 3.11"
description = "API project using FastAPI for logging services"
dependencies = ["fastapi>=0.1.16,<2.0.0", "boto3>=1.34.113, <1.35"]

[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'
